we want to compare two different cells, fdo#85353

Change-Id: Ie612555a63a1eff79e6c35aeed3cfa27b948ad38