sc/source/core/data/documen4.cxx
@@ -1324,7 +1324,7 @@ void ScDocument::CompareDocument( ScDocument& rOtherDoc )
                     if ( ValidCol(nOtherCol) && ValidRow(nOtherRow) )
                     {
                         ScAddress aOtherPos( nOtherCol, nOtherRow, nOtherTab );
-                        aOtherCell.assign(*this, aOtherPos);
+                        aOtherCell.assign(rOtherDoc, aOtherPos);
                     }
 
                     if (!aThisCell.equalsWithoutFormat(aOtherCell))
